--- a/settings.gradle
+++ b/settings.gradle
@@ -3,8 +3,12 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 rootProject.name = "WanAndroid"
-include ':app'
+include ':app',
+        ':libUtils',
+        ':libView',
+        ':coreBiz',
+        ':libBaseFunction'
+include ':libHttp'
