--- a/libHttp/build.gradle
+++ b/libHttp/build.gradle
@@ -26,9 +26,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    resourcePrefix "lib_http_"
+
 }
 
 dependencies {
     implementation project(':libUtils')
-
+    api 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
 }
