--- a/libUtils/build.gradle
+++ b/libUtils/build.gradle
@@ -1,6 +1,7 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+}
 apply from: '../config.gradle'
 
 android {
@@ -24,9 +25,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api 'androidx.appcompat:appcompat:1.4.1'
     api 'androidx.core:core-ktx:1.7.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    api 'com.google.code.gson:gson:2.9.0'
     api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    api 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt"
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-native-mt'
+    api 'com.blankj:utilcodex:1.31.0'
 }
