--- a/libView/build.gradle
+++ b/libView/build.gradle
@@ -1,6 +1,7 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+}
 apply from: '../config.gradle'
 
 android {
@@ -18,14 +19,24 @@ android {
         }
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
     resourcePrefix "lib_view_"
 
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api 'androidx.appcompat:appcompat:1.4.1'
     api 'com.google.android.material:material:1.5.0'
     api 'androidx.constraintlayout:constraintlayout:2.1.3'
-    api 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation project(':libUtils')
+    // 刷新组件：核心必须依赖
+    api 'io.github.scwang90:refresh-layout-kernel:2.0.5'
+    // 谷歌刷新头
+    api 'io.github.scwang90:refresh-header-material:2.0.5'
+    // 经典加载更多
+    api 'io.github.scwang90:refresh-footer-classics:2.0.5'
 }
