feat:引入glide图片加载

--- a/libBaseFunction/src/main/AndroidManifest.xml
+++ b/libBaseFunction/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.lzy.libbasefunction"/>
+    package="com.lzy.libbasefunction">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+</manifest>
