feat:注册功能和注册页面

--- a/coreBiz/src/main/AndroidManifest.xml
+++ b/coreBiz/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
             android:name=".login.ui.login.LoginActivity"
             android:exported="true"
             android:label="@string/core_biz_title_activity_login" />
+        <activity
+            android:name=".login.register.RegisterActivity"
+            android:exported="true"
+            android:label="@string/core_biz_action_register" />
     </application>
 
 </manifest>
