--- a/libHttp/build.gradle
+++ b/libHttp/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     api 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
+    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 }
