--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WanAndroid">
         <activity
-            android:name=".settings.AboutUsActivity"
-            android:exported="true"
-            android:label="@string/about_us" />
-        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
@@ -32,6 +28,14 @@
             android:name=".settings.SettingsActivity"
             android:exported="true"
             android:label="@string/settings" />
+        <activity
+            android:name=".settings.AboutUsActivity"
+            android:exported="true"
+            android:label="@string/about_us" />
+        <activity
+            android:name=".collect.CollectArticlesActivity"
+            android:exported="true"
+            android:label="@string/my_collect" />
     </application>
 
 </manifest>
