--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,40 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    buildTypes {
+    signingConfigs {
+        debug {
+            storeFile file("wanandroid.jks")
+            storePassword "123456"
+            keyAlias "wanandroid"
+            keyPassword "123456"
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
         release {
+            storeFile file("wanandroid.jks")
+            storePassword "123456"
+            keyAlias "wanandroid"
+            keyPassword "123456"
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
+    }
+
+    buildTypes {
+        debug {
+            debuggable true
+            shrinkResources false
             minifyEnabled false
+            zipAlignEnabled true
+            signingConfig signingConfigs.debug
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        release {
+            debuggable false
+            shrinkResources true
+            minifyEnabled true
+            zipAlignEnabled true
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -38,21 +69,23 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
-    implementation project(':coreBiz')
+    implementation "androidx.navigation:navigation-fragment-ktx:$project.ext.navigationVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$project.ext.navigationVersion"
     implementation 'androidx.preference:preference-ktx:1.2.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation "androidx.appcompat:appcompat:$project.ext.appCompatVersion"
+    implementation "com.google.android.material:material:$project.ext.materialVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$project.ext.constraintLayoutVersion"
+    // hilt
+    implementation "com.google.dagger:hilt-android:$project.ext.hiltVersion"
+    kapt "com.google.dagger:hilt-android-compiler:$project.ext.hiltVersion"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
+    implementation project(':coreBiz')
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    // hilt
-    implementation "com.google.dagger:hilt-android:2.38.1"
-    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
 }
 
 kapt {
