--- a/libBaseFunction/build.gradle
+++ b/libBaseFunction/build.gradle
@@ -28,11 +28,11 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api project(':libUtils')
     api project(':libHttp')
-    api 'com.github.bumptech.glide:glide:4.12.0'
-    kapt 'com.github.bumptech.glide:compiler:4.12.0'
-    api 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
+    api "com.github.bumptech.glide:glide:$project.ext.glideVersion"
+    kapt "com.github.bumptech.glide:compiler:$project.ext.glideVersion"
     // 使用 GlideModule 注解需要使用 Glide 注解的依赖
-    api 'com.github.bumptech.glide:annotations:4.12.0'
+    api "com.github.bumptech.glide:annotations:$project.ext.glideVersion"
+    api 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
     // 变换库
     api 'jp.wasabeef:glide-transformations:4.3.0'
 }
