--- a/libHttp/build.gradle
+++ b/libHttp/build.gradle
@@ -33,8 +33,8 @@ android {
 
 dependencies {
     implementation project(':libUtils')
-    api 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    api "com.squareup.retrofit2:retrofit:$project.ext.retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$project.ext.retrofitVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 }
